--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-auth-ktx'
 
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'com.github.florent37:runtime-permission-kotlin:1.1.2'
 }
