--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    aaptOptions {
+        noCompress "tflite"
+        noCompress "lite"
+    }
 }
 
 dependencies {
@@ -62,4 +66,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'com.github.florent37:runtime-permission-kotlin:1.1.2'
+
+    implementation 'org.tensorflow:tensorflow-lite:0.0.0-nightly'
+    implementation "org.jetbrains.anko:anko-commons:0.10.0"
 }
