--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,8 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        buildConfigField 'String', 'API_MAPS_URL', '"https://maps.googleapis.com/maps/api/place/"'
+        buildConfigField 'String', 'MAPS_API_KEY', '"AIzaSyDG2i9lWPkbMuBNdLuWbjJCutDLLU1DWHw"'
     }
 
     buildFeatures{
@@ -53,10 +55,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
-
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
-    implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
     implementation "com.github.bumptech.glide:glide:4.11.0"
 
     implementation platform('com.google.firebase:firebase-bom:28.0.1')
@@ -69,4 +67,9 @@ dependencies {
 
     implementation 'org.tensorflow:tensorflow-lite:0.0.0-nightly'
     implementation "org.jetbrains.anko:anko-commons:0.10.0"
+
+    // http
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_logging_version"
 }
