--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.3.72"
+    // http
+    ext.retrofit_version = "2.9.0"
+    ext.okhttp_logging_version = "3.11.0"
     repositories {
         google()
         jcenter()
